--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -18,142 +18,142 @@
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">1</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Ahmad Raihan Maulana Setiawan</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://aren.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">2</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Andini Azaria Zahra</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://andini.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">3</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Arrosyid Al Ayubi</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://arrosyid.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">4</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Arum Kusuma Dewi</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://arum.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">5</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Azzura Agustina</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://azzura.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">6</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Diaz Prasojo</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://diaz.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">7</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Diaz Shandika Firdaus</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://dika.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">8</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Gladys Aditya Ramadhan</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://gladys.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">9</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Farah Hilallia Alvina</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://farah.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">10</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Haikal Azhar</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://haikal.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">11</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Harsya Pandawa</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://harsya.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">12</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Hisyam Arief Firmansyah</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://hisyam.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">13</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Ihwan Ramadani</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://ihwan.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">14</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Isma Khoyriyah</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://isma.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">15</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Liza Zulaikha</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://liza.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">16</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Maylova Chayananda</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://maylova.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">17</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhamad Gilang Ramadan</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://gilang.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">18</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhammad Rizqi Rahman</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://rizqi.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">19</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhammad Shandi Yudha</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://shandi.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">20</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhammad Zaky Permana</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://zaky.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">21</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rayhan Priyonggo</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://rayhan.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">22</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Refael Gomgom Sibarani</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://refael.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">23</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rifky Chaezario Hidayat</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://rifky.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">24</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rizka Nur Juniarti</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://rizka.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">25</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rizky Nur Rahman</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://rizky.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">26</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Sultan Muhammad Syafiq</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://sultan.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">27</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Surya Aji Prasetya</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://surya.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                         <tr class="border-b border-gray-700">
                             <td class="px-4 py-3 text-gray-900">28</td>
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Zaqi Alfataillah</th>
-                            <td class="px-4 py-3 text-gray-900">Link Website</td>
+                            <td class="px-4 py-3 text-gray-900"><a href="https://zaqi.kelas10sifp.my.id" target="_blank" class="hover:underline">Link Website</a></td>
                         </tr>
                     </tbody>
                 </table>
