add deleted title element

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import "../style/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<title>Kelas 01SIFP010 SI UNPAM</title>
 		<link rel="icon" type="image/png" href="/logo-unpam.png" />
 		<meta name="description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
   		<meta name="keywords" content="Kelas,01SIFP010,Sistem,Informasi,UNPAM,Universitas,Pamulang">
