--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,20 +1,25 @@
 ---
 import "../style/global.css";
+
+const lottieProps = {
+    src: "https://lottie.host/ac0c3fa0-6d50-425f-b058-d1ff477408d7/i4vbGvHgSG.lottie",
+    style: "width: 350px; height: 350px;",
+};
 ---
 <script
   src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.5/dist/dotlottie-wc.js"
-  type="module"
+  is:inline
 ></script>
 <main id="tentang" class="w-full h-full flex flex-col items-center justify-center">
     <section class="p-5 md:p-20 w-full overflow-hidden h-full flex flex-col-reverse md:flex-row items-center justify-center mx-auto">
-        <div class="m-0 md:ml-5 p-5 w-screen md:w-1/2">
+        <header class="m-0 md:ml-5 p-5 w-full md:w-1/2">
             <h1 class="text-4xl font-bold mb-4 text-center">Selamat Datang di Kelas 01SIFP010</h1>
-            <p class="text-lg text-center mb-4">Ini adalah halaman beranda untuk kelas 01SIFP010 Sistem Informasi Fakultas Ilmu Komputer Universitas Pamulang</p>
-        </div>
-        <div class="m-0 md:mr-5 p-5 w-screen md:w-1/2 flex items-center justify-center">
+            <p class="text-lg text-center mb-4">Ini adalah halaman beranda untuk kelas 01SIFP010 Sistem Informasi Fakultas Ilmu Komputer Universitas Pamulang.</p>
+        </header>
+        <div class="m-0 md:mr-5 p-5 w-full md:w-1/2 flex items-center justify-center">
             <dotlottie-wc
-              src="https://lottie.host/ac0c3fa0-6d50-425f-b058-d1ff477408d7/i4vbGvHgSG.lottie"
-              style="width: 350px;height: 350px"
+              src={lottieProps.src}
+              style={lottieProps.style}
               autoplay
               loop
             ></dotlottie-wc>
