--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,30 +1,42 @@
 ---
 import "../style/global.css";
+import Navigasi from "../components/Navigasi.astro";
+import Footer from "../components/Footer.astro";
+
+export interface Props {
+	title?: string;
+	description?: string;
+}
+
+const {
+	title = "Kelas 01SIFP010 SI UNPAM",
+	description = "Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM",
+} = Astro.props;
 ---
 <!doctype html>
 <html lang="id">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Kelas 01SIFP010 SI UNPAM</title>
+		<title>{title}</title>
 		<link rel="icon" type="image/png" href="/logo-unpam.png" />
-		<meta name="description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+		<link rel="canonical" href={Astro.url.href} />
+		<meta name="description" content={description}>
   		<meta name="keywords" content="Kelas,01SIFP010,Sistem,Informasi,UNPAM,Universitas,Pamulang">
   		<meta name="author" content="Arrosyid Al Ayubi">
-		<meta property="og:title" content="Kelas 01SIFP010 SI UNPAM">
-		<meta property="og:url" content="https://kelas10sifp.my.id">
+		<meta property="og:url" content={Astro.url.href}>
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="Kelas 01SIFP010 SI UNPAM">
-		<meta property="og:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+		<meta property="og:title" content={title}>
+		<meta property="og:description" content={description}>
 		<meta property="og:image" content="https://kelas10sifp.my.id/og.png">
 		<meta name="twitter:card" content="summary_large_image">
-		<meta property="twitter:domain" content="kelas10sifp.my.id">
-		<meta property="twitter:url" content="https://kelas10sifp.my.id/">
-		<meta name="twitter:title" content="Kelas 01SIFP010 SI UNPAM">
-		<meta name="twitter:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+		<meta name="twitter:title" content={title}>
+		<meta name="twitter:description" content={description}>
 		<meta name="twitter:image" content="https://kelas10sifp.my.id/og.png">
 	</head>
 	<body class="flex flex-col min-h-screen">
+		<Navigasi />
 		<slot />
+		<Footer />
 	</body>
 </html>
