--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -8,7 +8,7 @@ const lottieProps = {
 ---
 <script
   src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.5/dist/dotlottie-wc.js"
-  is:inline
+  type="module"
 ></script>
 <main id="tentang" class="w-full h-full flex flex-col items-center justify-center">
     <section class="p-5 md:p-20 w-full overflow-hidden h-full flex flex-col-reverse md:flex-row items-center justify-center mx-auto">
