--- a/src/components/Navigasi.astro
+++ b/src/components/Navigasi.astro
@@ -2,16 +2,11 @@
 import "../style/global.css";
 import { Image } from "astro:assets";
 import logounpam from "../../public/logo-unpam.png";
-
-const navLinks = [
-    { href: "/", text: "Beranda" },
-    { href: "/#tentang", text: "Tentang" },
-    { href: "/#anggota", text: "Anggota" },
-];
+import { navigationLinks } from "../components/navLinks";
 ---
 
-<header class="bg-cyan-950 text-white relative">
-    <div class="w-full flex flex-row justify-between items-center p-5">
+<header class="bg-cyan-950 text-white relative z-50">
+    <div class="w-full flex flex-row justify-between md:justify-around items-center p-5">
         <a href="/">
             <Image
                 src={logounpam}
@@ -28,7 +23,7 @@ const navLinks = [
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex p-4">
             <ul class="flex flex-row gap-6">
-                {navLinks.map((link) => (
+                {navigationLinks.map((link) => (
                     <li><a href={link.href} class="hover:underline text-lg">{link.text}</a></li>
                 ))}
             </ul>
@@ -45,7 +40,7 @@ const navLinks = [
     <!-- Mobile Menu -->
     <nav id="mobile-menu" class="hidden md:hidden absolute top-full left-0 w-full bg-cyan-950">
         <ul class="flex flex-col items-center gap-4 p-5">
-            {navLinks.map((link) => (
+            {navigationLinks.map((link) => (
                 <li><a href={link.href} class="hover:underline text-lg">{link.text}</a></li>
             ))}
         </ul>
@@ -56,9 +51,13 @@ const navLinks = [
     const menuBtn = document.getElementById('menu-btn');
     const mobileMenu = document.getElementById('mobile-menu');
 
-    menuBtn.addEventListener('click', () => {
-        const isExpanded = menuBtn.getAttribute('aria-expanded') === 'true';
-        mobileMenu.classList.toggle('hidden');
-        menuBtn.setAttribute('aria-expanded', !isExpanded);
-    });
+    if (menuBtn && mobileMenu) {
+        menuBtn.addEventListener('click', () => {
+            const isExpanded = menuBtn.getAttribute('aria-expanded') === 'true';
+            mobileMenu.classList.toggle('hidden');
+            menuBtn.setAttribute('aria-expanded', String(!isExpanded));
+        });
+    } else {
+        console.error("Menu button or mobile menu not found.");
+    }
 </script>
