--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,10 @@ import Layout from '../layouts/Layout.astro';
 import Anggota from '../components/Anggota.astro';
 
 ---
-<Layout>
+<Layout 
+	title="Beranda | Kelas 01SIFP010"
+	description="Selamat datang di website resmi kelas 01SIFP010 Sistem Informasi Universitas Pamulang. Temukan informasi tentang kelas dan anggota kami."
+>
 	<Home />
 	<Anggota />
 </Layout>
