--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,40 +1,20 @@
 ---
-import "../style/global.css";
-import Navigasi from "../components/Navigasi.astro";
-import Footer from "../components/Footer.astro";
+import Navigasi from '../components/Navigasi.astro';
+import Footer from '../components/Footer.astro';
+import Seo from '../components/Seo.astro';
+import type { Props as SeoProps } from '../components/Seo.astro';
 
-export interface Props {
-	title?: string;
-	description?: string;
-}
+interface Props extends SeoProps {}
 
-const {
-	title = "Kelas 01SIFP010 SI UNPAM",
-	description = "Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM",
-} = Astro.props;
+const props = Astro.props;
 ---
-<!doctype html>
-<html lang="id">
+<html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>{title}</title>
-		<link rel="icon" type="image/png" href="/logo-unpam.png" />
-		<link rel="canonical" href={Astro.url.href} />
-		<meta name="description" content={description}>
-  		<meta name="keywords" content="Kelas,01SIFP010,Sistem,Informasi,UNPAM,Universitas,Pamulang">
-  		<meta name="author" content="Arrosyid Al Ayubi">
-		<meta property="og:url" content={Astro.url.href}>
-		<meta property="og:type" content="website">
-		<meta property="og:title" content={title}>
-		<meta property="og:description" content={description}>
-		<meta property="og:image" content="https://kelas10sifp.my.id/og.png">
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content={title}>
-		<meta name="twitter:description" content={description}>
-		<meta name="twitter:image" content="https://kelas10sifp.my.id/og.png">
+		<Seo {...props} />
 	</head>
-	<body class="flex flex-col min-h-screen">
+	<body>
 		<Navigasi />
 		<slot />
 		<Footer />
