adding link pdf custom

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -1,33 +1,33 @@
 ---
 const members = [
-    { id: 1, name: 'Ahmad Raihan Maulana Setiawan', subdomain: 'aren' },
-    { id: 2, name: 'Andini Azaria Zahra', subdomain: 'andini' },
-    { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid' },
-    { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum' },
-    { id: 5, name: 'Azzura Agustina', subdomain: 'azzura' },
-    { id: 6, name: 'Diaz Prasojo', subdomain: 'diaz' },
-    { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika' },
-    { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys' },
-    { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'farah' },
-    { id: 10, name: 'Haikal Azhar', subdomain: 'haikal' },
-    { id: 11, name: 'Harsya Pandawa', subdomain: 'harsya' },
-    { id: 12, name: 'Hisyam Arief Firmansyah', subdomain: 'hisyam' },
-    { id: 13, name: 'Ihwan Ramadani', subdomain: 'ihwan' },
-    { id: 14, name: 'Isma Khoyriyah', subdomain: 'isma' },
-    { id: 15, name: 'Liza Zulaikha', subdomain: 'liza' },
-    { id: 16, name: 'Maylova Chayananda', subdomain: 'maylova' },
-    { id: 17, name: 'Muhamad Gilang Ramadan', subdomain: 'gilang' },
-    { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi' },
-    { id: 19, name: 'Muhammad Shandi Yudha', subdomain: 'shandi' },
-    { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'zaky' },
-    { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan' },
-    { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael' },
-    { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky' },
-    { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'rizka' },
-    { id: 25, name: 'Rizky Nur Rahman', subdomain: 'rizky' },
-    { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sultan' },
-    { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya' },
-    { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi' },
+    { id: 1, name: 'Ahmad Raihan Maulana Setiawan', subdomain: 'aren', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 2, name: 'Andini Azaria Zahra', subdomain: 'andini', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 6, name: 'Diaz Prasojo', subdomain: 'diaz', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'farah', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 10, name: 'Haikal Azhar', subdomain: 'haikal', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 11, name: 'Harsya Pandawa', subdomain: 'harsya', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 12, name: 'Hisyam Arief Firmansyah', subdomain: 'hisyam', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 13, name: 'Ihwan Ramadani', subdomain: 'ihwan', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 14, name: 'Isma Khoyriyah', subdomain: 'isma', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 15, name: 'Liza Zulaikha', subdomain: 'liza', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 16, name: 'Maylova Chayananda', subdomain: 'maylova', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 17, name: 'Muhamad Gilang Ramadan', subdomain: 'gilang', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 19, name: 'Muhammad Shandi Yudha', subdomain: 'shandi', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'zaky', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'rizka', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 25, name: 'Rizky Nur Rahman', subdomain: 'rizky', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sultan', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi', pdf: 'https://pdf.kelas10sifp.my.id' },
 ];
 ---
 
@@ -42,6 +42,7 @@ const members = [
                             <th scope="col" class="px-4 py-3">No</th>
                             <th scope="col" class="px-4 py-3">Nama Anggota</th>
                             <th scope="col" class="px-4 py-3">Link Website</th>
+                            <th scope="col" class="px-4 py-3">PDF</th>
                         </tr>
                     </thead> 
                     <tbody>
@@ -52,6 +53,11 @@ const members = [
                                 <td class="px-4 py-3 text-gray-900">
                                     <a href={`https://${member.subdomain}.kelas10sifp.my.id`} target="_blank" class="hover:underline">
                                         Link Website
+                                    </a>
+                                </td>
+                                <td class="px-4 py-3 text-gray-900">
+                                    <a href={member.pdf} target="_blank" class="hover:underline">
+                                        Link PDF
                                     </a>
                                 </td>
                             </tr>
