update gladys subdomain

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -7,7 +7,7 @@ const members = [
     { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 6, name: 'Diaz Prasojo', subdomain: 'diaz', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladysaditya', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'farah', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 10, name: 'Haikal Azhar', subdomain: 'haikal', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 11, name: 'Harsya Pandawa', subdomain: 'harsya', pdf: 'https://pdf.kelas10sifp.my.id' },
