update subdomain for rizka rizky

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -23,8 +23,8 @@ const members = [
     { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'rizka', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 25, name: 'Rizky Nur Rahman', subdomain: 'rizky', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'princess', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 25, name: 'Rizky Nur Rahman', subdomain: 'kyyiell', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sultan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi', pdf: 'https://pdf.kelas10sifp.my.id' },
