--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -1,6 +1,6 @@
 ---
 const members = [
-    { id: 1, name: 'Ahmad Raihan Maulana Setiawan', subdomain: 'aren', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 1, name: 'Ahmad Raihan Maulana Setiawan', subdomain: 'raihan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 2, name: 'Andini Azaria Zahra', subdomain: 'andini', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://pdf.kelas10sifp.my.id' },
